# iatreion

./: .gitignore  README.md  pyproject.toml
src/iatreion/: __init__.py
src/iatreion/api/: __init__.py  rrl_eval.py  show.py
src/iatreion/cli/: __init__.py  common.py  process.py  rrl_eval.py  show.py  train.py
src/iatreion/configs/: __init__.py  common.py  dataset.py  model_base.py  model_cart.py  model_gatree.py  model_gosdt.py  model_limix.py  model_rf.py  model_rrl.py  model_rrl_discrete.py  model_tabpfn.py  model_xgb.py  preprocessor.py  rrl_eval.py  show.py  show_base.py  show_data.py  show_result.py  show_result_base.py  show_result_importance.py  show_result_interpretability.py  show_result_performance.py  show_result_shap.py  train.py  utils.py
src/iatreion/exceptions/: __init__.py  base.py
src/iatreion/gatree/: __init__.py  gatree.py
src/iatreion/gatree/ga/: crossover.py  mutation.py
src/iatreion/gatree/methods/: gatreeclassifier.py  gatreeclustering.py
src/iatreion/gatree/tree/: node.py
src/iatreion/gui/: __init__.py  bundle.py  rrl_eval.py  static.py  utils.py
src/iatreion/models/: __init__.py  base.py  cart.py  gatree.py  gosdt.py  importance.py  limix.py  limix_worker.py  rf.py  rrl.py  rrl_discrete.py  tabpfn.py  xgb.py
src/iatreion/preprocessors/: __init__.py  base.py  basic.py  blood_biomarker.py  cog_adl.py  cog_associative.py  cog_avlt.py  cog_cdr.py  cog_composite.py  cog_episodic.py  cog_had.py  cog_mmse.py  cog_mmse_sum.py  cog_moca.py  cog_moca_sum.py  exam_cdr.py  gene_snp.py  history.py  mri_cbf.py  mri_csvd.py  mri_volume.py  process_info.py  reference.py  sequential.py
src/iatreion/rrl/: __init__.py  config.py  experiment.py
src/iatreion/rrl/rrl/: components.py  models.py  utils.py
src/iatreion/runners/: __init__.py  base.py  basic.py  optuna.py
src/iatreion/show_helpers/: __init__.py  barplot.py  common.py  data.py  heatmap.py  importance.py  latex.py  performance.py  roc.py  shap.py
src/iatreion/train_utils/: __init__.py  limix.py  limix_worker.py  preprocessing.py  splitter.py
src/iatreion/trainers/: __init__.py  base.py  delicate.py  model.py  raw_model.py  recorder.py  rrl.py  utils.py
src/iatreion/tuning/: __init__.py  optuna.py
src/iatreion/utils/: __init__.py  file.py  logging.py  seed.py  string.py  time.py  worker.py
