[project]
name = "iatreion"
version = "0.1.0"
description = 'An interpretable dementia diagnoser. From Ancient Greek ἰατρεῖον ("clinic").'
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.5.3",
    "pandas[excel]>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "imbalanced-learn>=0.14.0",
    "xgboost>=3.0.0",
    "matplotlib>=3.10.1",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
cpu = [
    "tensorboard>=2.19.0",
    "torch>=2.5.1",
]
cu121 = [
    "tabpfn>=6.0.6",
    "tabpfn-extensions[interpretability]>=0.2.2",
    "tensorboard>=2.19.0",
    "torch>=2.5.1",
]
cu124 = [
    "tensorboard>=2.19.0",
    "torch>=2.5.1",
]
cu126 = [
    "tensorboard>=2.19.0",
    "torch>=2.5.1",
]

[project.scripts]
iatreion = "iatreion.cli:main"
iatreion-gui = "iatreion.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu121" },
        { extra = "cu124" },
        { extra = "cu126" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-cu121", extra = "cu121" },
    { index = "torch-cu124", extra = "cu124" },
    { index = "torch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "torch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff]
extend-exclude = [
    "src/iatreion/rrl/experiment.py",
    "src/iatreion/rrl/rrl/[!u]*.py",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/iatreion/configs/*" = ["E501"]
"src/iatreion/preprocessors/history.py" = ["E501"]
"src/iatreion/rrl/rrl/utils.py" = ["E501"]

[tool.ruff.format]
quote-style = "single"

[[tool.mypy.overrides]]
module = [
    "iatreion.rrl.*",
    "iatreion.utils.logging",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "imblearn.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true
